
      \item Use of \code{tapply()} with a 0-length \code{INDEX} list is
      deprecated with a warning.

      \item \samp{Translation} packages are deprecated.

      \item Calling \code{rep()} or \code{rep.int()} on a pairlist is
      deprecated and will give a warning.  In any case, \code{rep()}
      converted a pairlist to a list so you may as well do that
      explicitly.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item For a Windows or Mac OS X binary package install,
      \code{install.packages()} will check if a source package is
      available on the same repositories, and report if it is a later
      version or there is a source package but no binary package
      available.

      This check can be suppressed: see the help page.

      \item \code{install.packages(type = "both")} has been enhanced.
      In interactive use it will ask whether to choose the source
      version of a package if the binary version is older and contains
      compiled code, and also asks if source packages with no binary
      version should be installed).
    }
  }

  \subsection{INSTALLATION}{
     \itemize{
      \item LAPACK 3.4.1 does use some Fortran 90 features, so
      \command{g77} no longer suffices.
    }
 }
    
  \subsection{BUG FIXES}{
    \itemize{
      \item On Windows, starting \command{Rterm} via \command{R.exe}
      caused Ctrl-C to misbehave.  (\PR{14948})

      \item The \code{tools::latexToUtf8()} function missed conversions that
      were contained within braces.

      \item Long timezone specifications (such as a file name preceded
      by \code{:}) could crash \code{as.POSIXlt}.  (\PR{14945})

      \item \code{R CMD build --resave-data} could fail if there was no
      \file{data} directory but there was an \file{R/sysdata.rda} file.
      (\PR{14947})

      \item \code{is.na()} misbehaved on a 0-column data frame.
      (\PR{14959})

      \item \code{anova.lmlist()} failed if \code{test} was